tests/NormalTests/paczka1/fuzzy1/29010703.err
Error in line 5: n2PO5rnmh A900 -1,9
Error in line 4: n2PO5rnmh A900 8,6
Error in line 1: W5VUtqV S505 3,9
Error in line 6: mbKMh54WcwQ A900 25,4
Error in line 11: mbKMh54WcwQ S553 97,5
Error in line 23: mbKMh54WcwQ A900 56,6
Error in line 26: n2PO5rnmh A643 75,5
Error in line 35: wcpzIRc1hV S505 55,8
